--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3>+ a free book of your choice</h3>
     </div>
 </div>
-<div id="closeBtn" class="closeBtn img" style="background-image: url(img/close-btn.png);"></div>
+<div id="closeBtn" class="closeBtn img" style="background-image: url(img/close-button-png-30231.png);"></div>
 </div>
 <div class="line"></div>
 
